--- a/MonsterBlog/anketa.css
+++ b/MonsterBlog/anketa.css
@@ -24,10 +24,11 @@ body {
     align-items: center;
     gap: 10px;
     text-decoration: none;
+    margin-left: 10%;
   }
   
   .logo img {
-    height: 50px;
+    height: 65px;
   }
   
   .search-box {
